# phone-monitor

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  env.sample
.github/workflows/: build-docker-image.yaml
docs/: poc.py
src/: datatype.rs  main.rs  phone.rs  report.rs  util.rs
test_data/: battery_query.json  config_query.json  invalid_sign.json
