[package]
name = "phone-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
dotenv = "0.15.0"
env_logger = "0.11.6"
hmac-sha256 = "1.1.8"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
log = "0.4.25"

[dev-dependencies]
mockito = "1.6.1"
