[package]
name = "phone-monitor"
version = "0.2.2"
edition = "2021"

[dependencies]
aws-config = { version = "1.8.15", features = ["behavior-version-latest"] }
aws-sdk-cloudwatch = "1.108.0"
base64 = "0.22.1"
dotenv = "0.15.0"
env_logger = "0.11.10"
hmac-sha256 = "1.1.14"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
log = "0.4.29"
clap = { version = "4.6.0", features = ["env", "derive"] }

[dev-dependencies]
mockito = "1.7.2"
